--- a/motifdjango/motifapp/templates/motifapp/article_read.html
+++ b/motifdjango/motifapp/templates/motifapp/article_read.html
@@ -3,179 +3,73 @@
 
 
 {% block body %}
-<div id="wrapper" class="toggled"">
-    <!-- Article Content -->
-    <div class="row">
-        <div id="page-content-wrapper">
-            <div class="container-fluid no-padding">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="article-wrapper">
-
-                            <!--article body -->
-                            <div class="row">
-                                <div id="article-main-margin-1" class="col-lg-2"></div>
-                                <div class="article-main col-lg-8 col-md-12" id="article-main">
-                                    <div class="article-header">
-                                        <div class="article-title" id="article-title">
-                                            <h1 class="article-title">{{ article.title }} </h1>
-                                        </div>
-                                        <div class="row source-description">&nbsp&nbsp&nbsp&nbsp&nbsp
-                                            {% if article.author is not None %}
-                                            <p>by {{ article.author }},&nbsp</p>
-                                            {% endif %}
-                                            <a href="{{ article.web_url }}" target="_blank">
-                                                {{ article.domain}}
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="article-content"
-                                         style="font-size: {{request.user.socialprofile.theme_font_size}}rem;">
-                                        {{ article.body_content|safe }}
-                                    </div>
-                                    <div class="footer"
-                                         style="padding-top: 15px; border-top: 1px solid black; margin-top: 30px">
-                                        <p><i>Insert a paragraph here that says whatever necessary to avoid any copyright and legal issues</i></p>
-                                    </div>
-                                </div>
-                                <div id="article-main-margin-2" class="col-lg-2"></div>
-                            </div>
-                        </div>
+<!-- Article Content -->
+<div class="row">
+    <div id="article-wrapper" class="col-md-12">
+        <div class="row">
+            <!--article body with margin setup-->
+            <div class="article-main-margin col-lg-2"></div>
+            <div class="article-main col-lg-8 col-md-12" id="article-main">
+                <div class="article-header">
+                    <div class="article-title" id="article-title">
+                        <h1 class="article-title">{{ article.title }} </h1>
                     </div>
-                </div>
-            </div>
-        </div>
-        <!-- /#page-content-wrapper -->
-
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <a href="#menu-toggle" class="menu-toggle" style="text-decoration:none;">
-            <div class="toggle-button">
-                <img src="{{MEDIA_URL}}images/element/banana.jpg"
-                     style="height: 80px; padding-left: 0; border-radius: 10px">
-            </div>
-            </a>
-            <!-- star rating section -->
-            <div class="card article-read-user-info">
-                <div class="card-block">
-                    <div class="row">
-                        <div class="overall-rating col-6">
-                            <div class="Overall">{{ ratings|find_avg_c:article.id }}<span class="rating-note">/{{ ratings|find_number_of_rating:article.id }}</span></div>
+                    <div class="row source-description">
+                        <div class="col-sm-12 col-md-6">
+                            <p>
+                            {% if article.author is not None %}
+                            by {{ article.author }} &nbsp&nbsp&nbsp&nbsp
+                                {% endif %}
+                            {% if article.pub_date is not None %}
+                            {{ article.pub_date|date:"M j, y " }}
+                            {% endif %}
+                            </p>
                         </div>
-                        <div class="user-rating col-6">
-                            <!-- rating submission -->
-                            <a href="#" class="" data-toggle="modal" data-target="#myModal">
-                                <div class="edit-rating-wrapper">
-                                    {% if storage_entry.rating_c %}
-                                    <div class="creative-rating"> {{ storage_entry.rating_c }}</div>
-                                    {% else %}
-                                    <div class="creative-rating">Rate It</div>
-                                    {% endif %}
-                                </div>
+                        <div class="col-sm-12 col-md-6">
+                            <p>Source: <a href="{{ article.web_url }}" target="_blank">
+                                {{ article.domain}}
                             </a>
-                        </div>
-                        <div class="rating-explain col-md-6">
-                            <div class="number-of-rating">Total</div>
-                        </div>
-                        <div class="rating-explain col-md-6">
-                            <div class="user-rating-explain">You</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer text-muted time-cost">
-                    <h5>{{ reading_time }} mins read
-                        <a href="#" data-toggle="tooltip"
-                           title="Average readers reach around 200 words per minute with a typical comprehension of 60%."><span
-                                class="glyphicon glyphicon-question-sign"></span></a></h5>
-                </div>
-
-                <!-- Your summary -->
-                <div class="card-block">
-                    <p id="user-summary">
-                    {% if storage_entry.summary %}
-                        {{ storage_entry.summary }}
-                    </p>
-                    {% else %}
-                    </p>
-                    <button id="summarize-button" class="btn btn-primary">Summarize</button>
-                    {% endif %}
-                    <!-- summary form here -->
-                    <form id="summarize-form" role="form" method="post"
-                          action="{% url 'motifapp:summary_edit' article.id %}"
-                          enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="" style="padding-bottom: 10px;">
-                            <textarea class="form-control"
-                             {% if not summary %}
-                             placeholder="Summarize here"
-                             {% endif %} rows="10"
-                             id="summary" name="summary" type="text">{% if storage_entry.summary %}{{ storage_entry.summary }}{% endif %}</textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-sm"> Save</button>
-                        &nbsp&nbsp
-                        <button id="summarize-close-button" class="btn btn-primary btn-sm"
-                                type="button"> Close
-                        </button>
-                    </form>
-                    <!-- summary form end -->
-                </div>
-                {% if storage_entry.summary %}
-                <div class="card-footer text-muted" id="summary-edit-footer">
-                    <div class="row user-summary-edit-date">
-                        <div class="col-5">
-                            <button id="summarize-edit-button" class="btn btn-primary btn-sm"
-                                    type="button"> Edit
-                            </button>
-                            &nbsp&nbsp
-                            <a href="{% url 'motifapp:summary_delete' article.id %}"
-                               class="btn btn-primary btn-sm">Delete</a>
-                        </div>
-                        <div class="col-7">
-                            <p>Last edit: {{ storage_entry.summary_modified_date|naturaltime }}</p>
-                        </div>
-                    </div>
-                </div>
-                {% endif %}
-            </div>
-
-            <div class="card">
-                <ul class="list-group list-group-flush">
-                    {% for x in article.storage_from_followings %}
-                    {% if x.summary is not None %}
-                    <li class="list-group-item">
-                        <div class="card-detail">
-                            <div class="row">
-                                <div class="col-2">
-                                    <img src="{{MEDIA_URL}}{{ x.user.socialprofile.user_portrait }}"
-                                         class="summary-portrait rounded-circle">
-                                </div>
-                                <div class="col-6 discover-user-and-date">
-                                    <p>{{ x.user }}</p>
-                                    <p>{{ x.add_date|naturaltime}}</p>
-                                </div>
-                                <div class="col-2 discover-rating">
-                                    {% if x.rating_c is not None %}
-                                    <i class="fa fa-lightbulb-o" aria-hidden="true">&nbsp{{x.rating_c|floatformat}}</i>
-                                    {% endif %}
-                                </div>
-                                <div class="col-2 discover-rating">
-                                    {% if x.rating_c is not None %}
-                                    <i class="fa fa-book" aria-hidden="true">&nbsp{{x.rating_i|floatformat}}</i>
-                                    {% endif %}
-                                </div>
+                            <div class="btn-group mr-2 hidden-sm-up" role="group" aria-label="First group">
+                                <button type="button" class="btn btn-primary">
+                                    <i class="fa fa-moon-o" aria-hidden="true"></i><span class="hidden-sm-down">Theme(WIP)</span></button>
+                                <button type="button" id="font-minus" class="font-minus btn btn-secondary" style="font-size: 0.8rem">A-</button>
+                                <button type="button" id="font-plus" class="font-plus btn btn-secondary">A+</button>
                             </div>
+                            </p>
                         </div>
-                        <p>{{ x.summary }}</p>
-                    </li>
-                    {% endif %}
-                    {% endfor %}
-                </ul>
+                    </div>
+                </div>
+
+                <div class="article-content"
+                     style="font-size: {{request.user.socialprofile.theme_font_size}}rem;">
+                    {{ article.body_content|safe }}
+                </div>
+                <div class="article-footer"
+                     style="padding: 20px; witdh: 100%; margin-top: 30px">
+                    <p style="border-top: 1px solid black;"><i>Insert a paragraph here that says whatever necessary to avoid any copyright and legal issues</i></p>
+                </div>
             </div>
+            <div class="article-main-margin col-lg-2"></div>
+            <!--article body with margin setup end -->
         </div>
-        <!-- /#sidebar-wrapper -->
     </div>
+    <!-- /#page-content-wrapper -->
+
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper" class="col-md-5">
+    <!--<div id="sidebar-wrapper">-->
+        {% include "motifapp/article_read_sidebar.html" %}
+    </div>
+    <!-- /#sidebar-wrapper -->
+
+
+    <!--<footer class="hidden-md-up">-->
+        <!--<div class="container">-->
+        <!--</div>-->
+    <!--</footer>-->
+
+
 </div>
 {% include 'motifapp/star_rating_template.html' %}
-
 {% endblock %}
 
