--- a/motifdjango/motifapp/templates/motifapp/registration_form.html
+++ b/motifdjango/motifapp/templates/motifapp/registration_form.html
@@ -1,20 +1,51 @@
 {% extends 'motifapp/base.html' %}
 
 {% block body %}
-<div class ="container-fluid">
-    <h1> This is the register form </h1>
-    <form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% include 'motifapp/form_template.html' %}
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success">Submit</button>
-            </div>
+
+<div class="container">
+    <form class="form-signin" role="form" action="{% url 'motifapp:register' %}" method="post" enctype="multipart/form-data">
+        <h2 class="form-signin-heading">Register</h2>
+
+        <!--error message -->
+        {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+        {% endif %}
+
+        <label for="invite_code" class="sr-only">Invite Code</label>
+        <input type="text" id="invite_code" class="form-control" placeholder="Invite Code" name="invite_code" required autofocus>
+        &nbsp
+
+        <label for="id_username" class="sr-only">Username</label>
+        <input type="text" id="id_username" class="form-control" placeholder="Username" name="username" required autofocus>
+        <label for="id_email" class="sr-only">email</label>
+        <input type="email" id="id_email" class="form-control" placeholder="Email" name="email" required autofocus>
+        <label for="id_password" class="sr-only">Password</label>
+        <input type="password" id="id_password" class="form-control" placeholder="Password" name="password"  required>
+        <div class="panel-footer">
+            <p>All set? <a href="{% url 'motifapp:login' %}">Click here</a> to login</p>
         </div>
+        {% csrf_token %}
+        <button class="btn btn-lg btn-motif-1 btn-block" type="submit">Register</button>
     </form>
-</div>
-<div class="panel-footer">
-    Already have an account? <a href="{% url 'motifapp:login' %}">Click here</a> to login.
 </div>
 
 {% endblock %}
+
+
+
+<!--<div class ="container">-->
+    <!--<form class="form-signin" role="form" action="" method="post" enctype="multipart/form-data">-->
+        <!--{% csrf_token %}-->
+        <!--<h2 class="form-signin-heading">Register</h2>-->
+
+        <!--{% include 'motifapp/form_template.html' %}-->
+        <!--<div class="form-group">-->
+            <!--<div class="col-sm-offset-2 col-sm-10">-->
+                <!--<button type="submit" class="btn btn-success">Submit</button>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</form>-->
+<!--</div>-->
+<!--<div class="panel-footer">-->
+    <!--Already have an account? <a href="{% url 'motifapp:login' %}">Click here</a> to login.-->
+<!--</div>-->
