--- a/motifdjango/motifapp/templates/motifapp/user_view.html
+++ b/motifdjango/motifapp/templates/motifapp/user_view.html
@@ -1,49 +1,60 @@
 {% extends 'motifapp/base.html' %}
 <!--{% load staticfiles %}-->
 {% load motifapp_extra %}
-{% block saved_active %}active{% endblock %}
+{% block user_view %}active{% endblock %}
 
 
 {% block body %}
 
-
 <div class="container-fluid">
-    <div class="row">
-        <!--seartch tool-->
-        <div class="search-tool"></div>
+    <!--seartch tool-->
+    <div class="search-tool"></div>
+    {% include "motifapp/user_view_profile.html" %}
 
+    <div class="row">
         <!-- article card starts here -->
         <div class="card-deck">
             {% for article in user_saved_article %}
-            <div class="col-md-12 col-lg-4 col-xl-3" style="padding: 0px 8px 0;">
+            <div class="col-sm-12 col-md-6 col-lg-4" style="padding: 0px 10px 0;">
                 <div class="card">
                     <!-- article card image -->
-                    <a href="{{ article.id }}" class="article-thumb-link index-view-card">
-                        <div class="lead-image">
-                            <img class="card-img-top img-fluid" src="{{ article.lead_image_url }}">
-                            {% if article.storage__rating_c%}
-                            <div class="article-thumb-corner-info">
-                                <div class="row">
-                                    <div class="article-thumb-corner-user">
-                                        <i class="fa fa-lightbulb-o" aria-hidden="true"></i>
-                                        {{article.storage__rating_c }}<span class="rating-note">/you</span>
-                                    </div>
+                    <a href="{% url 'motifapp:article_read' article.id %}" class="article-thumb-link index-view-card">
+                        {% if article.storage__summary %}
+                            &nbsp
+                        {% elif article.lead_image_url %}
+                            <div class="lead-image">
+                                <img class="card-img-top img-fluid" src="{{ article.lead_image_url }}">
+                            </div>
+                        {% endif %}
 
-                                    <div class="article-thumb-corner-overall">
-                                        <i class="fa fa-lightbulb-o" aria-hidden="true"></i> {{ ratings|find_avg_c:article.id }}<span class="rating-note">/{{ ratings|find_number_of_rating:article.id }}</span>
-                                    </div>
+
+                        {% if article.storage__rating_c%}
+                        <div class="article-thumb-corner-info">
+                            <div class="row">
+                                <div class="article-thumb-corner-user">
+                                    <i class="fa fa-lightbulb-o" aria-hidden="true"></i>
+                                    {{article.storage__rating_c }}<span class="rating-note">/you</span>
+                                </div>
+                                <div class="article-thumb-corner-overall">
+                                    <i class="fa fa-lightbulb-o" aria-hidden="true"></i> {{ ratings|find_avg_c:article.id }}<span class="rating-note">/{{ ratings|find_number_of_rating:article.id }}</span>
                                 </div>
                             </div>
-                            {% endif %}
                         </div>
+                        {% endif %}
 
                         <!--article card info -->
                         <div class="card-block">
-                            <h4 class="card-title">{{ article.title }}</h4>
+                            <h4 class="card-title">{{ article.title|truncatewords:13  }}</h4>
                             <small class="text-muted">{{ article.word_count|divide:200}} mins read |
                                 {{ article.domain|domain_shorten }} |
                                 {{article.storage__add_date|date:"M j, y "}}
                             </small>
+                            {% if not article.lead_image_url %}
+                            <p>{{ article.body_content|truncatewords_html:60|safe }}</p>
+                            {% endif %}
+                            {% if article.storage__summary %}
+                            <p style="margin-top: 10px;"><span class="user-view-summary">&nbsp sum &nbsp</span>&nbsp{{ article.storage__summary }}</p>
+                            {% endif %}
                         </div>
                     </a>
                     <div class="card-footer index">
@@ -52,8 +63,11 @@
                                 {% if article.storage__summary_modified_date is not None %}
                                 <i class="fa fa-pencil " aria-hidden="true"></i>
                                 {{ article.storage__summary_modified_date|naturaltime}}
+                                {% else %}
+                                &nbsp
                                 {% endif %}
                             </div>
+                            {% if is_login_user %}
                             <div class="col-2 privacy-setting">
                                 {% if article.storage__public is True%}
                                 <a href="{% url 'motifapp:article_public_edit' article.id %}" class="article-public-edit public-edit-{{article.id}}">
@@ -63,14 +77,11 @@
                                 {% endif %}
                             </div>
                             <div class="col-2">
-                                <form action="{% url 'motifapp:article_delete' article.id %}"
-                                      method="post" style="display: inline;">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="article_id"
-                                           value="{{ article.id }}"/>
+                                <a href="{% url 'motifapp:article_delete' article.id %}" id="article-thumb-delete">
                                     <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                </form>
+                                </a>
                             </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
